--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=/Users/aefilms/Downloads/apache-tomcat-10.1.9
 j2ee.server.instance=tomcat101:home=/Users/aefilms/Downloads/apache-tomcat-10.1.9
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/SafariBrowser
 user.properties.file=/Users/aefilms/Library/Application Support/NetBeans/17/build.properties
